front/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: front-app
  labels:
    app: front-app
spec:
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
  selector:
    app: front-app
  type: LoadBalancer
