front/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: front-app-route
spec:
  tls:
    termination: edge
  to:
    kind: Service
    name: front-app
    weight: 100
  wildcardPolicy: None
